# chatbot-patty

./: .gitignore  README.md  app.py  pyproject.toml
data/: catalog.sample.csv
docs/planning/: build-log.md  current-stage.md  implementation-plan.md  prd.md
src/patty_bot/: __init__.py  cart.py  catalog.py  config.py  orders.py  repository.py
tests/: test_cart_acceptance.py  test_cart_add_product.py  test_cart_change_quantity.py  test_cart_models.py  test_cart_remove_product.py  test_cart_totals.py  test_catalog_acceptance.py  test_catalog_exact_search.py  test_catalog_loading.py  test_catalog_models.py  test_catalog_search.py  test_order_acceptance.py  test_order_details.py  test_repository.py  test_smoke.py
