[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-patty"
version = "0.1.0"
description = "MVP local en Streamlit para el chatbot de pedidos Patty."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
